--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
 
   
   kafka:
-    image: bitnami/kafka:latest
+    image: bitnami/kafka
     ports:
       - "${KAFKA_PORT}:9092"
       - "${KAFKA_CONTROLLER_PORT}:9093"
@@ -57,7 +57,7 @@ services:
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:${KAFKA_PORT}
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
       - ALLOW_PLAINTEXT_LISTENER=yes
@@ -67,10 +67,28 @@ services:
       - orders-network
     restart: unless-stopped
     
+  kafka-topics-setup:
+    image: bitnami/kafka
+    depends_on:
+      - kafka
+    environment:
+      - KAFKA_TOPIC=${KAFKA_TOPIC}
+    command: >
+      bash -c "
+      echo 'Waiting for Kafka...';
+      sleep 10;
+      /opt/bitnami/kafka/bin/kafka-topics.sh --create --if-not-exists 
+      --bootstrap-server kafka:9092 
+      --topic $${KAFKA_TOPIC} 
+      --partitions 1 
+      --replication-factor 1
+      "
+    networks:
+      - orders-network
+    restart: on-failure
 
 volumes:
   postgres_data:
-  zookeeper_data:
   kafka_data:
 
 
