--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      kafka:
+        condition: service_healthy
     environment:
        - DB_HOST=${DB_HOST}
        - DB_PORT=${DB_PORT}
@@ -37,7 +39,6 @@ services:
        - DB_SSL_MODE=${DB_SSL_MODE}
        - KAFKA_BROKERS=${KAFKA_BROKERS}
        - KAFKA_TOPIC=${KAFKA_TOPIC}
-       - KAFKA_GROUP_ID=${KAFKA_GROUP_ID}
     ports:
       - "${HTTP_PORT}:8080"
     networks:
@@ -46,42 +47,66 @@ services:
 
   
   kafka:
-    image: bitnami/kafka
+    image: bitnami/kafka:latest
+    container_name: kafka
     ports:
       - "${KAFKA_PORT}:9092"
-      - "${KAFKA_CONTROLLER_PORT}:9093"
     environment:
-      - KAFKA_KRAFT_ENABLED=true
+      - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_NODE_ID=1
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
       - ALLOW_PLAINTEXT_LISTENER=yes
     volumes:
       - kafka_data:/bitnami
+    healthcheck:
+      test: ["CMD-SHELL", "/opt/bitnami/kafka/bin/kafka-broker-api-versions.sh --bootstrap-server localhost:9092"]
+      interval: 10s
+      timeout: 20s
+      retries: 10
+      start_period: 40s
     networks:
       - orders-network
     restart: unless-stopped
     
+
   kafka-topics-setup:
-    image: bitnami/kafka
+    image: bitnami/kafka:latest
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     environment:
       - KAFKA_TOPIC=${KAFKA_TOPIC}
     command: >
       bash -c "
       echo 'Waiting for Kafka...';
-      sleep 10;
-      /opt/bitnami/kafka/bin/kafka-topics.sh --create --if-not-exists 
+      sleep 15;
+      /opt/bitnami/kafka/bin/kafka-topics.sh --create --if-not-exists
       --bootstrap-server kafka:9092 
       --topic $${KAFKA_TOPIC} 
       --partitions 1 
       --replication-factor 1
+      "
+    networks:
+      - orders-network
+    restart: on-failure
+
+
+  kafka-emulator:
+    build:
+      context: ./tools/producer-emulator
+    depends_on:
+      kafka:
+        condition: service_healthy
+    command: >
+      bash -c "
+      echo 'Waiting for Kafka and topic to be ready...';
+      sleep 30;
+      ./emulator
       "
     networks:
       - orders-network
