feat: Update producer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,8 @@ services:
   kafka-emulator:
     build:
       context: ./tools/producer-emulator
+    volumes:
+      - ./testdata:/app/testdata
     depends_on:
       kafka:
         condition: service_healthy
